@@ -289,6 +289,225 @@ avro_value_equal(avro_value_t *val1, avro_value_t *val2)
 }
 
 
+#define cmp(v1, v2) \
+	(((v1) == (v2))? 0: \
+	 ((v1) <  (v2))? -1: 1)
+int
+avro_value_cmp_fast(avro_value_t *val1, avro_value_t *val2)
+{
+	avro_type_t  type1 = avro_value_get_type(val1);
+	avro_type_t  type2 = avro_value_get_type(val2);
+	if (type1 != type2) {
+		return -1;
+	}
+
+	switch (type1) {
+		case AVRO_BOOLEAN:
+		{
+			int  v1;
+			int  v2;
+			check_return(0, avro_value_get_boolean(val1, &v1));
+			check_return(0, avro_value_get_boolean(val2, &v2));
+			return cmp(!!v1, !!v2);
+		}
+
+		case AVRO_BYTES:
+		{
+			const void  *buf1;
+			const void  *buf2;
+			size_t  size1;
+			size_t  size2;
+			size_t  min_size;
+			int  result;
+
+			check_return(0, avro_value_get_bytes(val1, &buf1, &size1));
+			check_return(0, avro_value_get_bytes(val2, &buf2, &size2));
+
+			min_size = (size1 < size2)? size1: size2;
+			result = memcmp(buf1, buf2, min_size);
+			if (result != 0) {
+				return result;
+			} else {
+				return cmp(size1, size2);
+			}
+		}
+
+		case AVRO_DOUBLE:
+		{
+			double  v1;
+			double  v2;
+			check_return(0, avro_value_get_double(val1, &v1));
+			check_return(0, avro_value_get_double(val2, &v2));
+			return cmp(v1, v2);
+		}
+
+		case AVRO_FLOAT:
+		{
+			float  v1;
+			float  v2;
+			check_return(0, avro_value_get_float(val1, &v1));
+			check_return(0, avro_value_get_float(val2, &v2));
+			return cmp(v1, v2);
+		}
+
+		case AVRO_INT32:
+		{
+			int32_t  v1;
+			int32_t  v2;
+			check_return(0, avro_value_get_int(val1, &v1));
+			check_return(0, avro_value_get_int(val2, &v2));
+			return cmp(v1, v2);
+		}
+
+		case AVRO_INT64:
+		{
+			int64_t  v1;
+			int64_t  v2;
+			check_return(0, avro_value_get_long(val1, &v1));
+			check_return(0, avro_value_get_long(val2, &v2));
+			return cmp(v1, v2);
+		}
+
+		case AVRO_NULL:
+		{
+			check_return(0, avro_value_get_null(val1));
+			check_return(0, avro_value_get_null(val2));
+			return 0;
+		}
+
+		case AVRO_STRING:
+		{
+			const char  *buf1;
+			const char  *buf2;
+			size_t  size1;
+			size_t  size2;
+			size_t  min_size;
+			int  result;
+
+			min_size = (size1 < size2)? size1: size2;
+			result = memcmp(buf1, buf2, min_size);
+			if (result != 0) {
+				return result;
+			} else {
+				return cmp(size1, size2);
+			}
+		}
+
+		case AVRO_ARRAY:
+		{
+			size_t  count1;
+			size_t  count2;
+			size_t  min_count;
+			size_t  i;
+			check_return(0, avro_value_get_size(val1, &count1));
+			check_return(0, avro_value_get_size(val2, &count2));
+
+			min_count = (count1 < count2)? count1: count2;
+			for (i = 0; i < min_count; i++) {
+				avro_value_t  child1;
+				avro_value_t  child2;
+				int  result;
+				check_return(0, avro_value_get_by_index
+					     (val1, i, &child1, NULL));
+				check_return(0, avro_value_get_by_index
+					     (val2, i, &child2, NULL));
+				result = avro_value_cmp_fast(&child1, &child2);
+				if (result != 0) {
+					return result;
+				}
+			}
+
+			return cmp(count1, count2);
+		}
+
+		case AVRO_ENUM:
+		{
+			int  v1;
+			int  v2;
+			check_return(0, avro_value_get_enum(val1, &v1));
+			check_return(0, avro_value_get_enum(val2, &v2));
+			return cmp(v1, v2);
+		}
+
+		case AVRO_FIXED:
+		{
+			const void  *buf1;
+			const void  *buf2;
+			size_t  size1;
+			size_t  size2;
+			check_return(0, avro_value_get_fixed(val1, &buf1, &size1));
+			check_return(0, avro_value_get_fixed(val2, &buf2, &size2));
+			if (size1 != size2) {
+				return -1;
+			}
+			return memcmp(buf1, buf2, size1);
+		}
+
+		case AVRO_MAP:
+		{
+			return -1;
+		}
+
+		case AVRO_RECORD:
+		{
+			size_t  count1;
+			check_return(0, avro_value_get_size(val1, &count1));
+
+			size_t  i;
+			for (i = 0; i < count1; i++) {
+				avro_value_t  child1;
+				avro_value_t  child2;
+				int  result;
+
+				check_return(0, avro_value_get_by_index
+					     (val1, i, &child1, NULL));
+				check_return(0, avro_value_get_by_index
+					     (val2, i, &child2, NULL));
+				result = avro_value_cmp_fast(&child1, &child2);
+				if (result != 0) {
+					return result;
+				}
+			}
+
+			return 0;
+		}
+
+		case AVRO_UNION:
+		{
+			int  disc1;
+			int  disc2;
+			check_return(0, avro_value_get_discriminant(val1, &disc1));
+			check_return(0, avro_value_get_discriminant(val2, &disc2));
+
+			if (disc1 == disc2) {
+				avro_value_t  branch1;
+				avro_value_t  branch2;
+				check_return(0, avro_value_get_current_branch(val1, &branch1));
+				check_return(0, avro_value_get_current_branch(val2, &branch2));
+				return avro_value_cmp_fast(&branch1, &branch2);
+			} else {
+				return cmp(disc1, disc2);
+			}
+		}
+
+		default:
+			return 0;
+	}
+}
+
+int
+avro_value_cmp(avro_value_t *val1, avro_value_t *val2)
+{
+	avro_schema_t  schema1 = avro_value_get_schema(val1);
+	avro_schema_t  schema2 = avro_value_get_schema(val2);
+	if (!avro_schema_equal(schema1, schema2)) {
+		return 0;
+	}
+
+	return avro_value_cmp_fast(val1, val2);
+}
+
+
 int
 avro_value_copy_fast(avro_value_t *dest, const avro_value_t *src)
 {
